--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -29,6 +29,7 @@
 \newcommand{\todo}[1]{\textcolor{red}{[TODO: #1]}\xspace}
 \newcommand{\sR}{\mathbb{R}}
 \newcommand{\dt}{\mathrm{d}t}
+\newcommand{\clawpack}{{\sc Clawpack\xspace}}
 \newcommand{\forestclaw}{Forestclaw\xspace}
 \newcommand{\pforest}{\texttt{p4est}\xspace}
 
@@ -102,22 +103,29 @@ that use adaptive mesh refinement.
 %unstructured meshes \comment{This sounds we are now going to talk
 %  about unstructured meshes.}.
 % CB: Good point, took it out.
-Of course, it has been realized early
-that it helps to aggregate degrees of freedom (DOF) at the element
-level, as it has been done with high-order spectral element
-\cite{TufoFischer99}, finite volume
-\cite{paramesh, chombo, samrai}, or discontinuous Galerkin
-\cite{BursteddeGhattasGurnisEtAl10} methods.
-\comment{Are you looking for references to parallel AMR codes?  Or more general AMR codes based on the FVM?}
-\todo{No, I was looking for unstructured FV references.  Would you have any,
-and can we add the block-AMR references later?}
+Of course, was realized early that it helps to aggregate degrees of
+freedom (DOF) at the element level, as has been done with high-order
+spectral element \cite{TufoFischer99}, finite volume (element?)
+\cite{???}, or discontinuous Galerkin
+\cite{BursteddeGhattasGurnisEtAl10} methods.  The finite volume method
+has typically been implemented using a single degree of freedom per
+cell on either structured \cite{ppm, clawpack, weno} or unstructured
+meshes \cite{ddfv, ausm+, openfoam, }.  \comment{Are you looking for
+  references to parallel AMR codes?  Or more general AMR codes based
+  on the FVM?}  \todo{No, I was looking for unstructured FV
+  references.  Would you have any, and can we add the block-AMR
+  references later?} \comment{But most finite volume methods
+  (structured or unstructured) only have a single degree of freedom
+  per mesh cell (``element''?)  Only recently have people increased
+  the order by extending the stencil (without increase the DOFs per
+  mesh cell).}
 
 % For example, SEs optimized for computational speed have originally been
 % implemented on unstructured conforming meshes \cite{TufoFischer99} and later
 % been extended to non-conforming adaptive meshes \cite{FischerKruseLoth02,
 % BursteddeGhattasGurnisEtAl10}.
 
-To enable hardware acceleration for parallel dynamic AMR, we like to
+To enable hardware acceleration for parallel dynamic AMR, we
 build upon the forest-of-octrees paradigm because of its low overhead
 and proven scalability \cite{BursteddeWilcoxGhattas11}.  This approach
 identifies each octree leaf with a mesh element.  In our work, we go
@@ -126,9 +134,10 @@ be a dense compute patch with $m^d$ DOFs.  In fact, this approach
 resembles block-structured AMR \cite{be-ol:1984, be-co:1989, be-le:1991,
 ColellaGravesKeenEtAl07,
 BerzinsLuitjensMengEtAl10} except that the
-patches are not overlapping, which enables us to capitalize on our
+patches are not overlapping (except in ghost cell regions),
+which enables us to capitalize on our
 previous experience with scalable FE solvers for PDEs
-\cite{BursteddeStadlerAlisicEtAl13}.  The Clawpack software
+\cite{BursteddeStadlerAlisicEtAl13}.  The \clawpack software
 \cite{LeVeque97} provides a popular implementation of such a patch.
 It has been designed to solve hyperbolic conservation laws
 % on a uniform compute patch
@@ -136,7 +145,7 @@ and successfully used in the context of block-structured AMR
 \cite{be-le:1991, amrclaw}.
 
 In this paper we describe our design for the coupling of forest-of-octree AMR
-with Clawpack at the leaf level.  We comment on challenges that arise in
+with \clawpack at the leaf level.  We comment on challenges that arise in
 enabling multiblock geometries and efficient parallelism and conclude with a range
 of numerical examples that demonstrate the conceptual improvements in relation
 to other approaches.
@@ -144,7 +153,7 @@ to other approaches.
 \section{Design principles}
 
 The starting point of our work is defined by the \pforest algorithms for
-forest-of-octrees AMR on the one hand, and the Clawpack algorithms for the
+forest-of-octrees AMR on the one hand, and the \clawpack algorithms for the
 numerical solution of hyperbolic conservation laws
 % on uniformly gridded domains
 on the other.  Both are specialized codes with the following characteristics:
@@ -153,6 +162,7 @@ on the other.  Both are specialized codes with the following characteristics:
 %Python to generate an input file, but the code itself is F77 (or maybe some
 %F90). }
 % CB: I made it optional.
+% DAC : Good.
 \begin{center}
 \begin{tabular}{l|l|l}
 & \multicolumn{1}{c|}{\pforest} & \multicolumn{1}{c}{Clawpack} \\
@@ -203,8 +213,7 @@ that allows read-only access to the sequence of blocks,
 the list of patches for each, and a lookup of neighbor patches (and
 their relative orientation which is nontrivial between blocks).
 Just as \pforest, \forestclaw stores only the patches local to each
-MPI rank.  The
-exchange of ghost data and parallel partitioning is provided
+MPI rank.  The exchange of ghost data and parallel partitioning is provided
 transparently by \pforest.  Mesh modification directives, such as
 local refinement and coarsening, are called from \forestclaw and
 relayed to \pforest.
@@ -275,19 +284,53 @@ The threaded parallelism over the degrees of freedom of a patch is handled by
 
 \section{Patch-based numerics at the leaf level}
 
+For hyperbolic problems, we integrate the solution on a a single patch
+using the wave propagation algorithm described by R. J. LeVeque and
+implemented in {\sc Clawpack} \cite{le:2002, clawpack}.  We assume a
+single degree of freedom per mesh cell and reconstruct a piecewise
+constant solution to obtain left and right states at a mesh cell
+edges.  At each edge, we solve Riemann problems to obtain left and
+right going waves propagating at speeds determined from the solution
+to the Riemann problem.  For scalar advection, the speed of each wave
+is simply the local advection speed at the cell interface. For
+non-linear problems and systems, an approximate Riemann solver, such
+as a Roe solver, is typically used. Wave limiters are used to surpress
+spurious oscillations at sharp gradients in the flow.
 
-Patch: contains the local coordinates and copies of neighboring ghost degrees
-of freedom.  The layer of ghost copies is usually 2 points deep.
+Data exchanges between neighboring patches are done via layers of
+ghost cells extending the dimensions along the edges of each patch.
+The interior edge values of a given patch overlap the ghost cell
+region of a neighboring patch.  For the second order wave propagation
+algorithm, two layers of ghost cells are sufficient.  Neighboring
+patches at the same level of refinement simply copy their interior
+edge values into a neighbors' ghost cells.  Neighboring fine grid
+patches average their interior edge data to a coarser neighbor's ghost
+cell values.  And neighboring coarse grid patches interpolate data
+from their interior edge cells to their fine grid neighbor's ghost
+cell values.  To avoid loss of conservation and the creation of
+spurious extrema, we use a standard conservative, limited
+interpolation scheme to interpolate values from the coarse grid to
+fine grid coarse cells \cite{amrclaw, chombo}.  When subcycling, time accurate
+data between coarse grids is used to fill in ghost cells for fine grids.
 
+Grid refinement and de-refinement also requires interpolation from coarse grids
+to newly created fine grids, and the averaging of fine grid data to a newly created
+underlying coarse grid.
 
 \section{Numerical results}
 
+* sphere results\\
+* swirl example
+
+To come...
 
 
 \section*{Acknowledgements}
 
 The authors acknowledge valuable discussion with Randy LeVeque, Marsha Berger,
-and Hans-Petter Langtangen.  The leaf/patch paradigm was independently presented
+and Hans-Petter Langtangen.  We also acknowledge David Ketchison and the KAUST sponsored HPC$^3$
+numerics workshop at which the initial phases of this project were first discussed.
+The leaf/patch paradigm was independently presented
 by B.\ as part of a talk at the SCI Institute, Utah, in July 2011.
 
 
